--- a/style.css
+++ b/style.css
@@ -52,11 +52,14 @@ body{
  }
  
 
-
+.ensembleCandide{
+    height: 1900px;
+}
 .candide {
 
      background-image: url("photocandide.jpg") ;
      background-size: 100% auto;
+     height: 1800px;
      
  }
 .textCandide{
